vlib/v/checker/tests/no_method_on_interface_propagation.out
vlib/v/checker/tests/no_method_on_interface_propagation.vv:9:5: notice: unused parameter: `a`
    7 | }
    8 | 
    9 | fn (a Animal) foo() {}
      |     ^
   10 | 
   11 | fn new_animal(breed string) Animal {
vlib/v/checker/tests/no_method_on_interface_propagation.vv:18:5: error: unknown method or field: `Cat.foo`
   16 |     a := new_animal('persian')
   17 |     if a is Cat {
   18 |         a.foo()
      |           ~~~~~
   19 |     }
   20 | }
